<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryTextColor"
    android:orientation="vertical"
    tools:context=".fragments.AccountFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:hapticFeedbackEnabled="true"
            android:id="@+id/aboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="12dp"
            android:text="@string/about_us"
            android:textColor="@color/primaryColor"
            android:textSize="25sp" />

        <TextView
            android:hapticFeedbackEnabled="true"
            android:id="@+id/rateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="12dp"
            android:text="@string/rate_us_text"
            android:textColor="@color/primaryColor"
            android:textSize="25sp" />

        <TextView
            android:hapticFeedbackEnabled="true"
            android:id="@+id/shareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="12dp"
            android:text="@string/share_text"
            android:textColor="@color/primaryColor"
            android:textSize="25sp" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/aboutAnimationView"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/aboutanim"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="12dp"
        android:text="@string/version_text"
        android:textColor="@color/primaryColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.98" />

</androidx.constraintlayout.widget.ConstraintLayout>